--- a/kvkk-rehberi.html
+++ b/kvkk-rehberi.html
@@ -135,21 +135,4 @@
                     <details class="faq-item">
                         <summary>
                             <span class="faq-question">Aydınlatma Yükümlülüğü nedir ve nasıl yerine getirilir?</span>
-                            <span class="faq-toggle">+</span>
-                        </summary>
-                        <div class="faq-answer">
-                            <p><strong>Aydınlatma Yükümlülüğü</strong>, veri toplamadan önce veya en geç veri toplama anında kişileri bilgilendirme zorunluluğudur.</p>
-                            
-                            <h5>Aydınlatma Metninde Bulunması Gerekenler:</h5>
-                            <ol>
-                                <li>Veri sorumlusunun kimliği ve iletişim bilgileri</li>
-                                <li>Kişisel verilerin hangi amaçla işleneceği</li>
-                                <li>İşlenen kişisel verilerin kimlere ve hangi amaçla aktarılabileceği</li>
-                                <li>Kişisel veri toplamanın yöntemi ve hukuki sebebi</li>
-                                <li>Veri sahibinin KVKK md.11'deki hakları</li>
-                            </ol>
-                            
-                            <h5>Pratik Öneriler:</h5>
-                            <ul>
-                                <li>Web sitenizde "Aydınlatma Metni" sayfası oluşturun</li>
-                                <li>Form doldurma alan
+                            <span class="
