--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -174,12 +174,12 @@
         </div>
     </footer>
 
-    <!-- Hoş Geldiniz Baloncuğu -->
-    <div class="welcome-bubble" id="welcome-bubble">
-        <button class="close-btn" onclick="this.parentElement.style.display='none'" aria-label="Kapat">×</button>
-        <h3>Tanışalım!</h3>
-        <p>GRCKobi'nin hikayesini ve KOBİ'nize nasıl değer katabileceğimizi keşfedin.</p>
+    <!-- Hoş Geldiniz Baloncuğu (YENİ HALİ) -->
+    <div class="welcome-bubble">
+        <button class="close-btn" aria-label="Kapat" title="Kapat">&times;</button>
+        <h3>Merhaba!</h3>
+        <p>GRCKobi'ye hoş geldiniz!</p>
     </div>
 
-    <style>
-        /* Say
+</body>
+</html>
