--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
         </div>
     </footer>
 
-    <!-- Hoş Geldiniz Baloncuğu -->
-    <div class="welcome-bubble" id="welcome-bubble">
-        <button class="close-btn" onclick="this.parentElement.style.display='none'" aria-label="Kapat">×</button>
-        <h3>GRCKobi'ye Hoş Geldiniz!</h3>
-        <p>KOBİ'niz için GRC ve KVKK çözümleri burada. Sorularınız mı var? Size yardımcı olabiliriz!</p>
+    <!-- Hoş Geldiniz Baloncuğu (YENİ HALİ) -->
+    <div class="welcome-bubble">
+        <button class="close-btn" aria-label="Kapat" title="Kapat">&times;</button>
+        <h3>Merhaba!</h3>
+        <p>GRCKobi'ye hoş geldiniz!</p>
     </div>
 </body>
 </html>
