--- a/kvkk-rehberi.html
+++ b/kvkk-rehberi.html
@@ -135,4 +135,43 @@
                     <details class="faq-item">
                         <summary>
                             <span class="faq-question">Aydınlatma Yükümlülüğü nedir ve nasıl yerine getirilir?</span>
-                            <span class="
+                            <span class="faq-toggle">+</span>
+                        </summary>
+                        <div class="faq-answer">
+                             <p><strong>Aydınlatma Yükümlülüğü</strong>, veri sorumlusunun, kişisel verilerini işlediği kişilere; verilerin hangi amaçla işlendiği, kimlere aktarıldığı, toplanma yöntemi ve hukuki sebebi ile veri sahibinin hakları konusunda bilgi verme zorunluluğudur.</p>
+                            <h5>Nasıl yerine getirilir?</h5>
+                            <ul>
+                                <li>Web sitenizde bir "Aydınlatma Metni" veya "Gizlilik Politikası" yayınlayarak.</li>
+                                <li>Fiziksel formlarda, sözleşmelerde bilgilendirme notları ekleyerek.</li>
+                                <li>Çalışanlar için iş sözleşmelerinde veya ek protokollerde.</li>
+                            </ul>
+                        </div>
+                    </details>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer Bölümü -->
+    <footer>
+        <div class="container">
+            <div class="footer-content text-center">
+                <p>© 2025 GRCKobi. Tüm hakları saklıdır.</p>
+                <p class="mt-2">
+                    <a href="gizlilik.html">Gizlilik Politikası</a> | 
+                    <a href="kullanim-sartlari.html">Kullanım Şartları</a> | 
+                    <a href="iletisim.html">İletişim</a>
+                </p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Hoş Geldiniz Baloncuğu (YENİ HALİ) -->
+    <div class="welcome-bubble">
+        <button class="close-btn" aria-label="Kapat" title="Kapat">&times;</button>
+        <h3>Merhaba!</h3>
+        <p>GRCKobi'ye hoş geldiniz!</p>
+    </div>
+
+</body>
+</html>
