--- a/risk-testi.html
+++ b/risk-testi.html
@@ -222,4 +222,33 @@
                 <!-- CTA Bölümü -->
                 <div class="cta-section text-center mt-4">
                     <h3>Detaylı Destek İçin</h3>
-                    <p>Risk değerlendirme sonuçlarınızı daha detaylı analiz etmek ve özelleştirilmiş çözüm
+                    <p>Risk değerlendirme sonuçlarınızı daha detaylı analiz etmek ve özelleştirilmiş çözüm önerileri almak için bizimle iletişime geçin.</p>
+                    <a href="iletisim.html" class="button mt-3">İletişime Geçin</a>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer Bölümü -->
+    <footer>
+        <div class="container">
+            <div class="footer-content text-center">
+                <p>© 2025 GRCKobi. Tüm hakları saklıdır.</p>
+                <p class="mt-2">
+                    <a href="gizlilik.html">Gizlilik Politikası</a> | 
+                    <a href="kullanim-sartlari.html">Kullanım Şartları</a> | 
+                    <a href="iletisim.html">İletişim</a>
+                </p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Hoş Geldiniz Baloncuğu (YENİ HALİ) -->
+    <div class="welcome-bubble">
+        <button class="close-btn" aria-label="Kapat" title="Kapat">&times;</button>
+        <h3>Merhaba!</h3>
+        <p>GRCKobi'ye hoş geldiniz!</p>
+    </div>
+
+</body>
+</html>
