--- a/risk-testi.html
+++ b/risk-testi.html
@@ -249,6 +249,10 @@
         <h3>Merhaba!</h3>
         <p>GRCKobi'ye hoş geldiniz!</p>
     </div>
+    <!-- Yukarı Çık Butonu -->
+    <button id="scrollTopBtn" title="Yukarı Çık" aria-label="Sayfanın başına dön">&uarr;</button>
 
 </body>
+</body>
 </html>
+
