--- a/gizlilik-politikasi.html
+++ b/gizlilik-politikasi.html
@@ -1,1 +1,212 @@
 
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gizlilik Politikası - GRCKobi</title>
+    <meta name="description" content="GRCKobi gizlilik politikası. Kişisel verilerinizin nasıl toplandığı, işlendiği ve korunduğu hakkında detaylı bilgi.">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+    <header class="navbar">
+        <div class="nav-container">
+            <div class="nav-brand">
+                <a href="index.html">GRCKobi</a>
+            </div>
+            <nav class="nav-menu" id="navMenu">
+                <a href="index.html">Ana Sayfa</a>
+                <a href="grc-nedir.html">GRC Nedir?</a>
+                <a href="hizmetler.html">Hizmetler</a>
+                <a href="blog.html">Blog</a>
+                <a href="hakkimizda.html">Hakkımızda</a>
+                <a href="iletisim.html">İletişim</a>
+            </nav>
+            <div class="nav-toggle" id="navToggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <button class="theme-toggle" id="themeToggle" aria-label="Tema değiştir">🌙</button>
+        </div>
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="breadcrumb">
+                <a href="index.html">Ana Sayfa</a> &gt; 
+                <span>Gizlilik Politikası</span>
+            </div>
+
+            <article class="content-box">
+                <h1>Gizlilik Politikası</h1>
+                <p class="article-meta">Son güncelleme: 15 Aralık 2024</p>
+                
+                <p>Bu gizlilik politikası, GRCKobi web sitesini ziyaret ettiğinizde kişisel verilerinizin nasıl toplandığı, işlendiği ve korunduğu konusunda sizi bilgilendirmek amacıyla hazırlanmıştır.</p>
+
+                <h2>Veri Sorumlusu</h2>
+                <div class="content-box mt-3">
+                    <p><strong>GRCKobi</strong>, 6698 sayılı Kişisel Verilerin Korunması Kanunu uyarınca "veri sorumlusu" sıfatıyla hareket etmektedir.</p>
+                    <p><strong>İletişim Bilgileri:</strong><br>
+                    E-posta: info@grckobi.com<br>
+                    Telefon: +90 212 XXX XX XX<br>
+                    Adres: [Şirket Adresi]</p>
+                </div>
+
+                <h2>İşlenen Kişisel Veriler</h2>
+                <p>Web sitemizi ziyaret ettiğinizde ve hizmetlerimizden yararlandığınızda aşağıdaki kişisel verileriniz işlenebilir:</p>
+                <ul>
+                    <li><strong>İletişim Verileri:</strong> Ad, soyad, e-posta adresi, telefon numarası</li>
+                    <li><strong>Teknik Veriler:</strong> IP adresi, tarayıcı bilgileri, işletim sistemi</li>
+                    <li><strong>Çerez Verileri:</strong> Site kullanım tercihleri, oturum bilgileri</li>
+                    <li><strong>İçerik Verileri:</strong> İletişim formları aracılığıyla paylaştığınız bilgiler</li>
+                </ul>
+
+                <h2>Veri İşleme Amaçları</h2>
+                <p>Kişisel verileriniz aşağıdaki amaçlarla işlenmektedir:</p>
+                <ul>
+                    <li>Size hizmet sunmak ve destek sağlamak</li>
+                    <li>İletişim taleplerinizi karşılamak</li>
+                    <li>Web sitemizin güvenliğini sağlamak</li>
+                    <li>Kullanıcı deneyimini iyileştirmek</li>
+                    <li>Yasal yükümlülükleri yerine getirmek</li>
+                    <li>Hizmet kalitemizi artırmak için analiz yapmak</li>
+                </ul>
+
+                <h2>Veri İşleme Hukuki Dayanakları</h2>
+                <div class="content-box mt-3">
+                    <p>Kişisel verilerinizi aşağıdaki hukuki dayanaklara göre işliyoruz:</p>
+                    <ul>
+                        <li><strong>Açık Rıza:</strong> İletişim formlarında verdiğiniz onaylar</li>
+                        <li><strong>Sözleşmenin İfası:</strong> Hizmet sözleşmelerinin yerine getirilmesi</li>
+                        <li><strong>Meşru Menfaat:</strong> Web sitesi güvenliği ve analitik</li>
+                        <li><strong>Hukuki Yükümlülük:</strong> Yasal gerekliliklerin karşılanması</li>
+                    </ul>
+                </div>
+
+                <h2>Çerez Politikası</h2>
+                <p>Web sitemiz, kullanıcı deneyimini iyileştirmek için çerezler kullanmaktadır:</p>
+                <ul>
+                    <li><strong>Zorunlu Çerezler:</strong> Site işlevselliği için gerekli</li>
+                    <li><strong>Performans Çerezler:</strong> Site performansını analiz etmek için</li>
+                    <li><strong>Tercih Çerezler:</strong> Tema seçimi gibi kullanıcı tercihlerini kaydetmek için</li>
+                </ul>
+                <p>Tarayıcı ayarlarınızdan çerezleri yönetebilirsiniz.</p>
+
+                <h2>Veri Paylaşımı</h2>
+                <div class="content-box mt-3">
+                    <p>Kişisel verilerinizi aşağıdaki durumlar dışında üçüncü taraflarla paylaşmıyoruz:</p>
+                    <ul>
+                        <li>Yasal zorunluluk olması durumunda</li>
+                        <li>Açık rızanızın bulunması halinde</li>
+                        <li>Teknik hizmet sağlayıcıları ile (veri işleyen sıfatıyla)</li>
+                        <li>Acil durumlarda yasal haklarımızı korumak için</li>
+                    </ul>
+                </div>
+
+                <h2>Veri Saklama Süresi</h2>
+                <p>Kişisel verileriniz, işlenme amacının gerektirdiği süre boyunca saklanır:</p>
+                <ul>
+                    <li><strong>İletişim Verileri:</strong> 3 yıl</li>
+                    <li><strong>Teknik Loglar:</strong> 1 yıl</li>
+                    <li><strong>Çerez Verileri:</strong> 2 yıl (türüne göre değişir)</li>
+                    <li><strong>Hizmet Kayıtları:</strong> İlgili mevzuatta belirtilen süreler</li>
+                </ul>
+
+                <h2>Veri Güvenliği</h2>
+                <div class="content-box mt-3">
+                    <p>Kişisel verilerinizin güvenliği için aşağıdaki önlemler alınmaktadır:</p>
+                    <ul>
+                        <li>SSL şifreleme ile güvenli veri aktarımı</li>
+                        <li>Düzenli güvenlik güncellemeleri</li>
+                        <li>Erişim kontrolü ve yetkilendirme sistemleri</li>
+                        <li>Düzenli yedekleme ve kurtarma sistemleri</li>
+                        <li>Çalışan eğitimleri ve gizlilik taahhütleri</li>
+                    </ul>
+                </div>
+
+                <h2>Veri Sahibinin Hakları</h2>
+                <p>KVKK uyarınca sahip olduğunuz haklar:</p>
+                <ul>
+                    <li><strong>Bilgi Talep Etme:</strong> Hangi verilerinizin işlendiğini öğrenme</li>
+                    <li><strong>Erişim Hakkı:</strong> Verilerinizin bir kopyasını talep etme</li>
+                    <li><strong>Düzeltme Hakkı:</strong> Yanlış verilerin düzeltilmesini isteme</li>
+                    <li><strong>Silme Hakkı:</strong> Verilerinizin silinmesini talep etme</li>
+                    <li><strong>İşleme İtiraz:</strong> Veri işlenmesine itiraz etme</li>
+                    <li><strong>Veri Taşınabilirliği:</strong> Verilerinizi başka platforma aktarma</li>
+                </ul>
+
+                <h2>Haklarınızı Kullanma</h2>
+                <div class="content-box mt-3">
+                    <p>Yukarıdaki haklarınızı kullanmak için:</p>
+                    <ul>
+                        <li><strong>E-posta:</strong> info@grckobi.com</li>
+                        <li><strong>Yazılı Başvuru:</strong> Şirket adresimize posta ile</li>
+                    </ul>
+                    <p>Başvurularınızı en geç 30 gün içinde değerlendirip sonuçlandırıyoruz.</p>
+                </div>
+
+                <h2>İletişim</h2>
+                <p>Bu gizlilik politikası hakkında sorularınız için:</p>
+                <ul>
+                    <li>E-posta: info@grckobi.com</li>
+                    <li>Telefon: +90 212 XXX XX XX</li>
+                </ul>
+
+                <h2>Değişiklikler</h2>
+                <div class="content-box mt-3">
+                    <p>Bu gizlilik politikasında yapılacak değişiklikler web sitemizde yayınlanacaktır. Önemli değişiklikler için e-posta ile bilgilendirme yapılabilir.</p>
+                </div>
+            </article>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>GRCKobi</h3>
+                    <p>KOBİ'ler için GRC çözümleri</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Hızlı Linkler</h4>
+                    <ul>
+                        <li><a href="grc-nedir.html">GRC Nedir?</a></li>
+                        <li><a href="hizmetler.html">Hizmetler</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="iletisim.html">İletişim</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Yasal</h4>
+                    <ul>
+                        <li><a href="gizlilik-politikasi.html">Gizlilik Politikası</a></li>
+                        <li><a href="kullanim-sartlari.html">Kullanım Şartları</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>İletişim</h4>
+                    <p>Email: info@grckobi.com</p>
+                    <p>Telefon: +90 212 XXX XX XX</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 GRCKobi. Tüm hakları saklıdır.</p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Hoş Geldiniz Baloncuğu -->
+    <div class="welcome-bubble">
+        <button class="close-btn" aria-label="Kapat" title="Kapat">&times;</button>
+        <h3>Merhaba!</h3>
+        <p>GRCKobi'ye hoş geldiniz!</p>
+    </div>
+
+    <!-- Yukarı Çık Butonu -->
+    <button id="scrollTopBtn" title="Yukarı Çık" aria-label="Sayfanın başına dön">&uarr;</button>
+
+    <script src="site-scripts.js"></script>
+</body>
+</html>
